# stocks-news-agent

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
contracts/: codegen.yml  ml-api.yml  openapi.yml
contracts/schemas/: ml_types.json  news_item.json
docs/: AGENT_EVOLUTION_ROADMAP.md  F0_API_REFERENCE.md  F0_IMPLEMENTATION_GUIDE.md  F1_API_REFERENCE.md  F1_MILESTONE_COMPLETE.md  F2_AB_TESTING_SYSTEM.md  F2_API_REFERENCE.md  M3_API_REFERENCE.md  M3_ARCHITECTURE_GUIDE.md  M3_DEPLOYMENT_GUIDE.md  M3_MILESTONE_COMPLETE.md  ML_SEPARATION_SUMMARY.md  RANKING_ENHANCEMENT_SUMMARY.md  performance-analysis-report.md  quality-validation-report.md
ml/serving/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ml/serving/ml_service/: __init__.py  main.py
ml/serving/ml_service/api/: __init__.py  admin.py  v1.py
ml/serving/ml_service/core/: __init__.py  config.py  logging.py  metrics.py
ml/serving/ml_service/models/: bandit_schemas.py
ml/serving/ml_service/services/: __init__.py  bandit_service.py  clustering_service.py  deep_embed_service.py  embed_service.py  embedding_cache_service.py  importance_service.py  model_comparison_service.py  model_manager.py  onnx_embed_service.py  summarize_service.py
ml/serving/models/: metadata-latest.json
ml/training/: data_extraction.py  model_training.py  requirements.txt
scripts/: apache_bench_test.sh  performance_test.py  test_f0_features.py  test_f1_features.py  test_m3_features.py
services/api/: .gitignore  Dockerfile  (+5 more)
web/: .gitignore  Dockerfile  next.config.mjs  package.json
(+109 files in other folders)
