[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-service"
version = "0.1.0"
description = "ML serving service for news importance, summarization, and embedding"
authors = [
    {name = "News Agent Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "joblib>=1.3.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
]
requires-python = ">=3.9"

[tool.hatch.build.targets.wheel]
packages = ["ml_service"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true